# wireguard-requests

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  wheels.yml
examples/: async_example.py  basic.py  context_manager.py  requests_session.py
python/wireguard_requests/: __init__.py  _native.pyi  async_socket.py  config.py  context.py  exceptions.py  natpmp.py  session.py  socket.py  tls.py  udp_socket.py
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/benches/: throughput.rs
rust/src/: config.rs  error.rs  lib.rs  packet.rs  stream.rs  tun_interface.rs  tunnel.rs  udp_socket.rs
tests/integration/: conftest.py  docker-compose.yml  test_new_features.py  test_real_tunnel.py
tests/unit/: test_async_socket.py  test_config.py  test_config_ipv6.py  test_context.py  test_context_ipv6.py  test_natpmp.py  test_socket_api.py  test_tls.py  test_udp_socket.py
