[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "wireguard-requests"
version = "0.0.2"
description = "Drop-in socket replacement for transparent WireGuard tunneling in Python"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Python Developer", email = "pypi.org@cri.xyz" },
]
keywords = ["wireguard", "vpn", "socket", "networking", "tunnel", "proxy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: System :: Networking",
    "Topic :: Internet",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
requests = ["requests>=2.28"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "requests>=2.28",
    "httpx>=0.24",
    "aiohttp>=3.9",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/bshuler/wireguard-requests"
Issues = "https://github.com/bshuler/wireguard-requests/issues"

[tool.maturin]
python-source = "python"
module-name = "wireguard_requests._native"
manifest-path = "rust/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = ["wg-config"]
markers = [
    "integration: marks tests requiring WireGuard Docker peer",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
